fix hamburger bug in ie (navigation_wrap becomes block from flexbox)

--- a/sass/components/navigation.scss
+++ b/sass/components/navigation.scss
@@ -12,25 +12,26 @@
   }
 
   &__wrap {
+    border: 1px solid transparent;
     position: relative;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
     height: 100%;
     width: $screen-sm;
     margin: 0 auto;
+    padding: 20px 19px 0;
+    font-size: 0;
+
 
     @media (min-width: $screen-md) {
       width: $screen-md;
       height: 110px;
+      padding: 34px 19px 0;
     }
 
     @media (min-width: $screen-lg) {
       // outline: 3px dotted cyan;
       width: $screen-lg;
-      justify-content: flex-start;
-
+      padding: 34px 9px 0;
+      // justify-content: flex-start;
     }
   }
 
@@ -56,7 +57,7 @@
     @media (min-width: $screen-lg) {
       z-index: auto;
       position: absolute;
-      top: auto;
+      top: 0;
       right: 0;
       margin: 0;
       align-self: flex-end;
@@ -132,19 +133,22 @@
 
   &__logo-wrap {
     z-index: 10;
-    margin-left: 20px;
+    float: left;
 
     @media (min-width: $screen-lg) {
-      margin-left: 10px;
+      // margin-left: 10px;
     }
   }
 
   &__hamburger-wrap {
     position: relative;
-    margin-right: 20px;
+    float: right;
+    margin: 0;
     height: 24px;
     width: 50px;
     cursor: pointer;
+    align-self: center;
+    // outline: 1px dashed green;
 
     .hamburger-item {
       fill: $text-menu-color;
@@ -158,6 +162,10 @@
 
     &:active {
       opacity: 0.3;
+    }
+
+    @media (min-width: $screen-md) {
+      margin-top: 10px;
     }
 
     @media (min-width: $screen-lg) {
